--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,11 @@
     color: white;
     font-size: 3rem;
 }
+
+.card {
+    background-color: azure;
+}
+
+.card-content {
+    background-color: azure;
+}
