--- a/assets/style.css
+++ b/assets/style.css
@@ -108,3 +108,19 @@ img:hover {
     text-align: center;
     margin-bottom: 20px;
 }
+
+.style-Button {
+    position:absolute;
+    top: 70%; 
+    right: 55%; 
+    transform: translate(0, -50%); 
+    border-left: 1px solid rgb(11, 8, 8);
+    border-top-right-radius: 25px;
+    color: white;
+}
+
+.bird-sighting {
+    display: flex;
+    align-items: center;
+}
+
