--- a/assets/style.css
+++ b/assets/style.css
@@ -108,3 +108,14 @@ img:hover {
     text-align: center;
     margin-bottom: 20px;
 }
+
+.hotspot {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-decoration: underline;
+}
+
+.observation-card {
+    margin: 15px;
+}
