--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ header {
 }
 
 .main-menu {
+    font-size: 2rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,6 +31,19 @@ header {
     padding: 10px;
     display: block;
 }
+
+.weather {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media screen and (min-width:768px) and (max-width: 1132px) {
+    .weather img {
+        width: 50px;
+        height: 50px;
+    }
+}
+
 
 .dropdown-menu {
     display: none;
@@ -64,6 +78,19 @@ header {
     justify-content: center;
     align-items: center;
     font-size: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+    .main-menu {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .message {
+        margin-top: 8px;
+        font-size: 1.5rem;
+    }
 }
 
 section {
