--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,10 @@ header {
     font-size: 2rem;
 }
 
+.page {
+    padding-bottom: 8px;
+}
+
 .main-menu {
     display: flex;
     justify-content: space-around;
@@ -105,20 +109,6 @@ img:hover {
     margin-bottom: 20px;
 }
 
-.style-Button {
-    position:absolute;
-    top: 70%; 
-    right: 55%; 
-    transform: translate(0, -50%); 
-    border-left: 1px solid rgb(11, 8, 8);
-    border-top-right-radius: 25px;
-    color: white;
-}
-
-.bird-sighting {
-    display: flex;
-    align-items: center;
-}
 
 .hotspot {
     text-align: center;
@@ -129,4 +119,33 @@ img:hover {
 
 .observation-card {
     margin: 15px;
+}
+
+#textbox {
+    height: 100px;
+    width: 800px;
+    padding: 20px;
+    color: rgb(20, 19, 19);
+    border: 1px solid #ccc;
+    vertical-align: top;
+    line-height: 1;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+textarea {
+    resize: none;
+}
+
+.saveBtn {
+    background-color: green;
+    color: white;
+    height: 20px;
+    line-height: 10px;
+    width: 100px;
+    margin-top: 140px;
+    margin-right: 30px;
+    text-align: center;
+    cursor: pointer;
+
 }
